--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="main">
         <div class="tekst"> Dziękujemy za opinię!</div>
         <div class="buttons">
-            <form action="index.html" method="post">
+            <form action="https://akoltysszkola.github.io/7-cudow-swiata/" method="post">
             <button type="submit">Powrót na stronę</button>
 
 
